--- a/package.json
+++ b/package.json
@@ -8,5 +8,16 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "md5": "^2.2.1",
+    "multer": "^1.3.1",
+    "mysql": "^2.16.0",
+    "svg-captcha": "^1.3.11"
+  }
 }
