--- a/package.json
+++ b/package.json
@@ -1,12 +1,31 @@
 {
   "name": "skyline",
   "version": "1.0.0",
-  "description": "",
+  "description": "node项目——视野",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/krm007/horizon.git"
+  },
+  "bugs": {
+    "url": "https://github.com/krm007/horizon/issues"
+  },
+  "homepage": "https://github.com/krm007/horizon#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "md5": "^2.2.1",
+    "multer": "^1.3.1",
+    "mysql": "^2.16.0",
+    "svg-captcha": "^1.3.11"
+  }
 }
